# TestTaskTree

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  Readme.txt
Tests/: CMakeLists.txt  UnitTests.cpp
Tests/ResourceFiles/ExceptionTests/InvalidNodeTypeTest/: input.txt
Tests/ResourceFiles/TreeTests/BigTreeTest/: input.txt  output.txt
Tests/ResourceFiles/TreeTests/OneNodeTreeTest/: input.txt  output.txt
Tree/: CMakeLists.txt
Tree/Sources/: BaseNode.h  Exceptions.cpp  Exceptions.h  Main.cpp  Node.inl  Tree.cpp  Tree.h
